<resources>
    <string name="app_name">MyToDo</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="mytodo">MyToDo</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="use_online_offline_service">Use Online/Offline Service</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
</resources>
