<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
        <TextView
            android:id="@+id/text_sign_up"
            android:text="@string/log_in"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/edit_user_name"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_sign_in"
            android:text="@string/sign_in"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue_700"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/switch_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/use_online_offline_service"
            android:textColor="@color/grey_700"
            android:layout_marginTop="100dp"/>
        <TextView
            android:id="@+id/text_register"
            android:text="@string/register"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"/>

    </LinearLayout>

</ScrollView>
